--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,26 @@
 			<artifactId>jquery-mask-plugin</artifactId>
 			<version>1.14.16</version>
 		</dependency>
+
+		<dependency>
+			<groupId>javax.persistence</groupId>
+			<artifactId>javax.persistence-api</artifactId>
+			<version>2.2</version>
+		</dependency>
+
+		<!-- Dependência para a implementação do JPA com Hibernate -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.5.6.Final</version>
+		</dependency>
+
+		<!-- Dependência para o driver do banco de dados (por exemplo, MySQL) -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.28</version>
+		</dependency>
 	</dependencies>
 
 	<build>
