--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,12 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.28</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>6.0.11</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
