--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,18 @@
             <artifactId>spring-tx</artifactId>
             <version>6.0.11</version>
         </dependency>
+
+		<!-- Thymeleaf -->
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf-spring5</artifactId>
+			<version>3.0.11.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>nz.net.ultraq.thymeleaf</groupId>
+			<artifactId>thymeleaf-layout-dialect</artifactId>
+			<version>2.1.2</version>
+		</dependency>
     </dependencies>
 
 	<build>
