--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
-# Configurações do banco de dados MySQL
+# Configuraï¿½ï¿½es do banco de dados MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/WTL_mvc?createDatabaseIfNotExist=true
 spring.datasource.username=seu_usuario
 spring.datasource.password=sua_senha
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Configuração do dialeto do Hibernate para MySQL
+# Configuraï¿½ï¿½o do dialeto do Hibernate para MySQL
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 #JPA
