--- a/pom.xml
+++ b/pom.xml
@@ -72,10 +72,10 @@
 
 		<!-- Dependência para a implementação do JPA com Hibernate -->
 		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>
-			<version>5.5.6.Final</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+
 
 		<!-- Dependência para o driver do banco de dados (por exemplo, MySQL) -->
 		<dependency>
