--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,13 @@
 			<artifactId>thymeleaf-layout-dialect</artifactId>
 			<version>2.1.2</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+			<version>3.1.4</version>
+		</dependency>
     </dependencies>
 
 	<build>
